# smart-contracts-compare

./: .gitignore  README.md
anchor/: .gitignore  Anchor.toml  README.md  package.json
anchor/programs/plutocratic-hosting/: Cargo.toml
anchor/programs/plutocratic-hosting/src/: lib.rs
anchor/tests/: plutocratic-hosting.spec.ts
cosmwasm/: Cargo.toml  NOTICE  README.md
cosmwasm/examples/: schema.rs
cosmwasm/schema/: config.json  content_response.json  handle_msg.json  init_msg.json  query_msg.json
cosmwasm/src/: contract.rs  error.rs  msg.rs  state.rs
ink/: Cargo.toml  README.md  lib.rs
near/: .gitignore  .gitpod.yml  README.md  asconfig.js  package.json
near/.dependabot/: config.yml
near/.theia/: settings.json
near/contract/: Cargo.toml
near/contract/src/: lib.rs
near/contracts/assembly/: main.ts  model.ts  tsconfig.json
near/contracts/rust/: Cargo.toml
near/neardev/: dev-account.env
near/src/: config.js  index.html  main.js  test.js
solidity/: README.md  truffle-config.js
solidity/contracts/: ContentTracker.sol
solidity/migrations/: 1_initial_migration.js
solidity/test/: contentTrackerTest.js
